# startracker

./: Cargo.toml  LICENSE  README.md  pyproject.toml
src/: cameraframe.rs  framestats.rs  framewriter.rs  healpix.rs  kdtree.rs  lib.rs  serfile.rs  starfinder.rs
src/pybindings/: mod.rs  pycameraframe.rs  pyserfile.rs  pystarfinder.rs
