[package]
name = "startracker"
version = "0.1.0"
edition = "2021"
description = "Star Tracker"
readme = "README.md"
licence = "MIT"
license-file = "LICENSE"
categories = ["aerospace", "algorithms", "mathematics", "science"]


# See more keys and their definitions at 
# https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "startracker"
crate-type = ["cdylib"]

[dependencies]
thiserror = "1.0"
num = "0.4.3"
chrono = "0.4.38"
rand = "0.8.5"
png = "0.17.13"
pyo3 = "0.21.2"
numpy = "0.21.0"

